Pcam2019/vitis/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'Pcam5C-2019'

21:49:00 **** Incremental Build of configuration Debug for project Pcam5C-app ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Github/Zybo_mipi/Pcam2019/vitis/Pcam5C-2019/export/Pcam5C-2019/sw/Pcam5C-2019/standalone_domain/bspinclude/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
In file included from ../src/main.cc:7:
../src/ov5640/AXI_VDMA.h: In instantiation of 'void digilent::AXI_VDMA<IrptCtl>::writeHandler(uint32_t) [with IrptCtl = digilent::ScuGicInterruptController; uint32_t = long unsigned int]':
../src/ov5640/AXI_VDMA.h:61:25:   required from 'digilent::AXI_VDMA<IrptCtl>::AXI_VDMA(uint16_t, uint32_t, IrptCtl&, uint16_t, uint16_t) [with IrptCtl = digilent::ScuGicInterruptController; uint16_t = short unsigned int; uint32_t = long unsigned int]'
../src/main.cc:84:21:   required from here
../src/ov5640/AXI_VDMA.h:248:13: error: invalid conversion from 'char*' to 'char' [-fpermissive]
    *pointer = (char *)intPointer;
    ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
../src/ov5640/AXI_VDMA.h:253:16: error: invalid conversion from 'int*' to 'int' [-fpermissive]
    *intPointer = (int *)pointer; //counter
    ~~~~~~~~~~~~^~~~~~~~~~~~~~~~
make[1]: *** [src/subdir.mk:23: src/main.o] Error 1
make: *** [makefile:48: all] Error 2
21:49:02 **** Incremental Build of configuration Debug for project Pcam5C-app_system ****
make all 
Generating bif file for the system project
generate_system_bif.bat 61004 C:/Github/Zybo-Z7-20-pcam-5c-2019.1/vitis/Pcam5C-2019/export/Pcam5C-2019/Pcam5C-2019.xpfm standalone_domain C:/Github/Zybo_mipi/Pcam2019/vitis/Pcam5C-app_system/Debug/system.bif
xpfm path is not valid
    invoked from within
"::tcf::eval -progress {apply {{msg} {puts $msg}}} {tcf_send_command tcfchan#0 xsdb eval s es {{::scw::generate_bif -xpfm C:/Github/Zybo-Z7-20-pcam-5c-2019.1/vitis/Pcam5C-2019/export/Pcam5C-2019/Pcam5C-2019.xpfm -domains standalone_domain -bifpath C:/Github/Zybo_mipi/Pcam2019/vitis/Pcam5C-app_system/Debug/system.bif}}}"
    (procedure "::tcf::send_command" line 4)
    invoked from within
"tcf send_command $::xsdb::curchan xsdb eval s es [list "::scw::generate_bif $GENERATE_BIF_ARGS"]"
    (file "C:/Xilinx/Vitis/2019.2\scripts\vitis\util\generate_system_bif.tcl" line 25)
make: *** [makefile:36: sd_card] Error 1
